# BudEngine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_tools.bat  build_vs2026.bat  check_budmesh.py  diff.txt  diff_cmd.txt  pack_assets.ps1  vcpkg.json
.github/workflows/: build-windows.yml
data/meshlets/: Cube.budmesh
data/scenes/: sponza_scene.json
doc/: Architecture.md  AssetManager.md  EngineRoadmap.md  Graphics.md  Memory.md  Threading.md  check_budmesh.md  dev_note.md
glsl src/shaders/: main.frag  main.vert  shadow.frag
samples/triangle/: main.cpp  triangle.cpp  triangle.hpp
src/core/: bud.asset.types.hpp  bud.core.cppm  bud.core.hpp  bud.logger.cpp  bud.logger.hpp  bud.math.cppm  bud.math.hpp
src/dod/: bud.dod.cppm  bud.dod.hpp
src/graphics/: bud.graphics.cpp  bud.graphics.cppm  bud.graphics.defs.cppm  bud.graphics.graph.cpp  bud.graphics.graph.hpp  bud.graphics.hpp  bud.graphics.memory.cppm  bud.graphics.memory.hpp  bud.graphics.passes.cpp  bud.graphics.passes.cppm  bud.graphics.passes.hpp  bud.graphics.pool.cppm  bud.graphics.pool.hpp  bud.graphics.renderer.cpp  bud.graphics.renderer.cppm  bud.graphics.renderer.hpp  bud.graphics.rhi.cppm  bud.graphics.rhi.hpp  bud.graphics.scene.cpp  bud.graphics.scene.cppm  bud.graphics.scene.hpp  bud.graphics.sortkey.hpp  bud.graphics.types.cppm  bud.graphics.types.hpp  bud.ml_passes.cpp  bud.ml_passes.hpp  bud.ml_perception.cpp  bud.ml_perception.hpp
src/graphics/d3d12/: bud.d3d12.memory.hpp  bud.graphics.d3d12.hpp
src/graphics/graph/: bud.graphics.graph.cpp  bud.graphics.graph.cppm  bud.graphics.graph.hpp
src/graphics/rhi/: bud.graphics.rhi.cppm
src/graphics/vulkan/: bud.graphics.vulkan.cpp  bud.graphics.vulkan.cppm  bud.graphics.vulkan.hpp  bud.vulkan.descriptors.cpp  bud.vulkan.descriptors.cppm  bud.vulkan.descriptors.hpp  bud.vulkan.memory.cpp  bud.vulkan.memory.cppm  bud.vulkan.memory.hpp  bud.vulkan.pipeline.cpp  bud.vulkan.pipeline.cppm  bud.vulkan.pipeline.hpp  bud.vulkan.pool.cpp  bud.vulkan.pool.cppm  bud.vulkan.pool.hpp  bud.vulkan.sync2.cpp  bud.vulkan.sync2.hpp  bud.vulkan.types.cppm  bud.vulkan.types.hpp  bud.vulkan.utils.cppm  bud.vulkan.utils.hpp
src/input/: bud.input.manager.cpp  bud.input.manager.hpp
src/io/: bud.io.cpp  bud.io.cppm  bud.io.hpp
src/ml/: bud.ml.backend.hpp  bud.ml.environment.hpp  bud.ml.interactor.hpp  bud.ml.manager.hpp  bud.ml.policy.hpp  bud.ml.rl_py_bind.cpp  bud.ml.tensor.hpp  bud.ml.types.hpp
src/platform/: bud.platform.cppm  bud.platform.hpp  crash_handler.hpp  crash_handler_win.cpp  window.cpp
src/platform/windows/: switch_context_win_x86_64.asm
src/runtime/: bud.camera_sequencer.cpp  bud.camera_sequencer.hpp  bud.engine.cpp  bud.engine.cppm  bud.engine.hpp  bud.game.cpp  bud.game.hpp  bud.gameplay.cppm  bud.input.cpp  bud.input.cppm  bud.input.hpp  bud.scene.cpp  bud.scene.cppm  bud.scene.hpp  bud.scene.io.hpp  bud_engine.cpp
src/shaders/: cluster_debug.frag  cluster_debug.vert  debug_ui.frag  debug_ui.vert  depth_only.vert  fullscreen.vert  heuristic_histogram.comp  heuristic_occluder_select.comp  heuristic_prefix_sum.comp  hiz_cull.comp  hiz_debug.frag  hiz_mip.comp  main.frag  main.vert  meshlet_frustum_cull.comp  meshlet_hiz_cull.comp  meshlet_indirect_emit.comp  ml_depth_downsample.comp  ml_identity.comp  shadow.frag  shadow.vert  triangle.frag  triangle.vert  zprepass.frag  zprepass.vert
src/threading/: bud.io.cppm  bud.threading.cpp  bud.threading.cppm  bud.threading.hpp
src/tools/BudAssetTool/: CMakeLists.txt  bud.asset.processor.cpp  bud.asset.processor.hpp  main.cpp
src/tools/bud_tool_support/: CMakeLists.txt  bud_tool_support.cpp  bud_tool_support.hpp  example_main.cpp
src/tools/shader_layout_codegen/: CMakeLists.txt  main.cpp
src/ui/: bud.stats.ui.cpp  bud.stats.ui.hpp
